--- a/src/main/resources/static/index_ejercicio3.html
+++ b/src/main/resources/static/index_ejercicio3.html
@@ -5,11 +5,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>Universidad Fidelitas</title>
+        <title>Tienda</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <a href="index_ejercicioclase2.html">&triangleleft;</a>
+        <a href="index.html">Home</a>
+        <a href="index_ejercicio4.html">&triangleright;</a>
+        
         <div>
             <h1 style="text-align: center">EJEMPLO3</h1>
             <p>Bienvenidos a la pagina de la tienda en linea...</p>
