--- a/src/main/resources/static/index_ejercicio4.html
+++ b/src/main/resources/static/index_ejercicio4.html
@@ -5,11 +5,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>Universidad Fidelitas</title>
+        <title>Tienda</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <a href="index_ejercicioclase3.html">&triangleleft;</a>
+        <a href="index.html">Home</a>
+        <a href="index_ejercicio5.html">&triangleright;</a>
+        
         <h1>Ejemplos de encabezados</h1>
         <h2>Encabezado nivel 2</h2>
         <h3>Encabezado nivel 3</h3>
